# PycharmProjects

./: .gitignore
AccessRootFile/: main.py
AccessRootFile_Object_Inside_Object/: main.py
Decorators/: example_1.py  example_2.py  example_schedd_wrapper.py  logging_decorator.py
Dictionary/: main.py
HEP/BootStrapping/: main.py
HEP/BootStrapping/BootstrapGenerator-v1.11.2/: BootstrapGeneratorConfig.cmake.in  CMakeLists.txt  ChangeLog  README.md
HEP/BootStrapping/BootstrapGenerator-v1.11.2/BootstrapGenerator/: BootstrapGenerator.h  BootstrapGeneratorDict.h  TH1Bootstrap.h  TH1DBootstrap.h  TH1FBootstrap.h  TH2Bootstrap.h  TH2DBootstrap.h  TH2FBootstrap.h  TH3Bootstrap.h  TH3DBootstrap.h  sfmt.h  stocc.h
HEP/BootStrapping/BootstrapGenerator-v1.11.2/Root/: BootstrapGenerator.cxx  LinkDef.h  TH1Bootstrap.cxx  TH2Bootstrap.cxx  TH3Bootstrap.cxx  mersenne.cxx  sfmt.cxx  stoc1.cxx  stoc2.cxx
HEP/BootStrapping/BootstrapGenerator-v1.11.2/cmt/: CMakeLists.txt.StandAlone  Makefile.RootCore  Makefile.Standalone  link.RootCore  requirements
HEP/BootStrapping/BootstrapGenerator-v1.11.2/scripts/: DijetSystematicsExample.root  MyHelpers.C  MyHelpers.h  SlidingBinsSmoothing.h  Smoothing.h  SmoothingExample.C  TestBootstrap.C  TestCorrelations.C  UnfoldingExample.C  bootstrap_dijet.root  bootstrap_incjet.root  bootstrap_trijet.root  gridmerge  test.C  unfold.C
HEP/BootStrapping/BootstrapGenerator-v1.11.2/test/: simpleTest.cxx
HEP/Higgs/Higgs_potential/: higgs_potential.py
HEP/Profiling/: main.py
HEP/RootFileAnalysis/: engine.py  gear1.py  gear2.py  run.py  run_script.py
MC_generation/: main.py  mc_integration_1.py  mc_integration_2.py  mc_integration_3.py  mc_integration_4.py  phase_space_differential_2d.py  random_number_gen.py  random_number_gen_gaussian_transform.py  random_number_gen_hit_and_miss.py  veto_alg.py  veto_alg_radioactive_dec.py  veto_alg_radioactive_dec_naive_survival_prob.py
MLttyProdttyDec/: ML_model.py  ReadRootFile.py  Save_image.py  checkpoint  main.py
Onnx-Inference/CaloML/: ClusterEnergies.root  config_hgm_mc16.yaml  feature_transformer.py  process_features.py  runONNXInference.ipynb
Onnx-Inference/CaloML/.ipynb_checkpoints/: runONNXInference-checkpoint.ipynb
Onnx-Inference/CaloML_withCPP/CaloML/: HGM_3.model-03-12-2025.onnx  config_hgm_mc20.yaml  hgm_mode_finder.py  model.py  runONNXInference.ipynb
Onnx-Inference/CaloML_withCPP/CaloML/.ipynb_checkpoints/: runONNXInference-checkpoint.ipynb
Onnx-Inference/CaloML_withCPP/CaloML/cpp/: compile.sh  gaussian_mixture.cpp  gaussian_mixture.h  main  main.cpp
Onnx-Inference/TutorialPandas/: 10minutes_to_pandas.ipynb
classInPython/: main.py
fit_using_MC_method/: fit_3d.py  main.py
helloWorld/: main.py
importingModules/: Entity.py  Rectangle.py  main.py
initTest/: testdaq.py
initTest/directory/: __init__.py  config.py  test.py  test_2.py  test_4.py
initTest/directory/directory2/: test_3.py
regex/: main.py
